--- a/website/client/package.json
+++ b/website/client/package.json
@@ -23,5 +23,9 @@
     "tslib": "^2.6.2",
     "typescript": "^5.2.2",
     "vite": "^5.1.4"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.1",
+    "flowbite-svelte-icons": "^1.4.3"
   }
 }
