--- a/pi/pyproject.toml
+++ b/pi/pyproject.toml
@@ -9,8 +9,9 @@ readme = "README.md"
 python = "^3.11"
 requests = "^2.31.0"
 adafruit-circuitpython-dht = "^4.0.4"
-pyserial = "^3.5"
 adafruit-circuitpython-bmp3xx = "^1.3.19"
+sds011lib = "^0.4.0"
+gpiozero = "^2.0.1"
 
 
 [build-system]
